--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,8 +8,29 @@ mysql:
   host: "127.0.0.1"
   port: 3306
   user: "root"
-  password: "yzgl"
+  password: "123456"
   dbname: "gochat"
   maxidle: 50
   maxopen: 150
   maxlifetime: 300
+
+
+redis:
+  host: "127.0.0.1"
+  port: 6379
+  password: ""
+  db: 0
+  
+  # 连接池核心配置（仅保留3个必选参数）
+  pool_size: 100          # 最大活跃连接数（新旧版本一致）
+  min_idle_conns: 20      # 最小空闲连接数（新旧版本一致）
+  max_idle_conns: 50      # 最大空闲连接数（新旧版本一致）
+
+
+# sms:
+#   enable: true
+#   access_key_id: "your_access_key_id"       # 阿里云 AccessKey ID
+#   access_key_secret: "your_access_key_secret" # 阿里云 AccessKey Secret
+#   sign_name: "短信签名"                    # 阿里云短信签名
+#   template_code: "SMS_XXXXXXX"             # 阿里云短信模板ID
+#   region_id: "cn-hangzhou"                 # 阿里云区域ID（默认杭州）
